--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.61.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.460.0",
     "match-sorter": "^6.3.4",
@@ -28,6 +30,7 @@
     "react-router-dom": "^6.22.3",
     "shadcn": "^2.1.6",
     "sort-by": "^0.0.2",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
