--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
+    "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
+    "rehype-raw": "^7.0.0",
     "shadcn": "^2.1.6",
     "sort-by": "^0.0.2",
     "swiper": "^11.1.15",
