--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.3",
     "react-spinners": "^0.14.1",
     "rehype-raw": "^7.0.0",
     "shadcn": "^2.1.6",
