--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.3",
     "react-spinners": "^0.14.1",
+    "react-tabs": "^6.0.2",
     "rehype-raw": "^7.0.0",
     "shadcn": "^2.1.6",
     "sort-by": "^0.0.2",
